[gd_scene load_steps=11 format=2]

[ext_resource path="res://interface/Interface.gd" type="Script" id=1]
[ext_resource path="res://interface/subcomponents/animated_progress_bar/AnimatedProgressBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://skill_panel/SkillPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/assets/fonts/Content.tres" type="DynamicFont" id=4]
[ext_resource path="res://interface/components/chat_box/ChatBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/components/mini_map/MiniMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://eq/Equipment.tscn" type="PackedScene" id=7]
[ext_resource path="res://interface/components/button_list/ButtonList.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugInfoPanels" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 87.0
margin_bottom = 86.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Latency" type="PanelContainer" parent="MarginContainer/DebugInfoPanels"]
margin_right = 67.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/DebugInfoPanels/Latency"]
margin_left = 7.0
margin_top = 7.0
margin_right = 60.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Latency:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target" type="PanelContainer" parent="MarginContainer/DebugInfoPanels"]
margin_top = 35.0
margin_right = 59.0
margin_bottom = 66.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/DebugInfoPanels/Target"]
margin_left = 7.0
margin_top = 7.0
margin_right = 52.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Target:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRightPanel" type="PanelContainer" parent="MarginContainer"]
margin_left = 1060.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 220.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TopRightPanel"]
margin_right = 200.0
margin_bottom = 200.0

[node name="MiniMap" parent="MarginContainer/TopRightPanel/VBoxContainer" instance=ExtResource( 6 )]

[node name="ServerClock" type="PanelContainer" parent="MarginContainer/TopRightPanel/VBoxContainer"]
margin_left = 54.0
margin_top = 169.0
margin_right = 146.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/TopRightPanel/VBoxContainer/ServerClock"]
margin_left = 7.0
margin_top = 7.0
margin_right = 85.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Server Time:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomMiddlePanel" type="PanelContainer" parent="MarginContainer"]
margin_left = 465.0
margin_top = 614.0
margin_right = 815.0
margin_bottom = 700.0
size_flags_horizontal = 4
size_flags_vertical = 8
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomMiddle" type="VBoxContainer" parent="MarginContainer/BottomMiddlePanel"]
margin_right = 350.0
margin_bottom = 86.0
rect_min_size = Vector2( 100, 40 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/BottomMiddlePanel/BottomMiddle"]
margin_right = 350.0
margin_bottom = 17.0
mouse_filter = 2
alignment = 1

[node name="HealthBar" parent="MarginContainer/BottomMiddlePanel/BottomMiddle/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 173.0
margin_bottom = 17.0

[node name="ManaBar" parent="MarginContainer/BottomMiddlePanel/BottomMiddle/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_top = 0.0
margin_right = 350.0
margin_bottom = 17.0

[node name="SkillPanel" parent="MarginContainer/BottomMiddlePanel/BottomMiddle" instance=ExtResource( 3 )]
margin_top = 21.0
margin_right = 350.0
margin_bottom = 65.0

[node name="ExperienceBar" parent="MarginContainer/BottomMiddlePanel/BottomMiddle" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 69.0
margin_right = 350.0
margin_bottom = 86.0

[node name="ChatBox" parent="MarginContainer" instance=ExtResource( 5 )]

[node name="Equipment" parent="MarginContainer" instance=ExtResource( 7 )]
margin_left = 20.0
margin_top = 353.0
margin_right = 34.0
margin_bottom = 367.0

[node name="Floating" type="Node" parent="."]

[node name="ButtonList" parent="Floating" instance=ExtResource( 8 )]
